fix: hero bg image width and layout shift.

--- a/src/App.css
+++ b/src/App.css
@@ -33,3 +33,13 @@ html {
 .dm-sans {
     font-family: var(--dm-sans);
 }
+
+#hero {
+    background: url('/assets/bg/gradient-bg-hero.svg') no-repeat;
+}
+
+@media (min-width: 1536px) {
+    #hero {
+        background: url('/assets/bg/gradient-bg-hero.svg') center/cover no-repeat;
+    }
+}
